# nandt

./: .gitignore  README.md  generated_docs_public.yaml  requirements.txt  todo.md
clinic_scheduler_saas/: .env.example  main.py  pyproject.toml
clinic_scheduler_saas/alembic/: env.py
clinic_scheduler_saas/alembic/versions/: bf7a0db360d3_initial_migration.py
clinic_scheduler_saas/api/: auth.py  bookings.py  organizations.py
clinic_scheduler_saas/core/: config.py  database.py
clinic_scheduler_saas/models/: organization.py  user.py
clinic_scheduler_saas/schemas/: booking.py  organization.py  token.py  user.py
clinic_scheduler_saas/services/: auth_service.py  cal_com_service.py
clinic_scheduler_saas/static/css/: style.css
clinic_scheduler_saas/static/js/: app.js
clinic_scheduler_saas/templates/: base.html  dashboard.html  login.html
dialysis_scheduler/: .env.example  CHANGELOG.md  PRODUCTION_GUIDE.md  app.py  config.py  forms.py  requirements.txt  requirements_production.txt  teamup_api.py
hospital-booking/: .gitignore  CLAUDE.md  DEPLOYMENT.md  MIGRATION_AUDIT.md  README.md  TENANT_MANAGEMENT_PLAN.md  TODO_20251116.md  checklist.md  create_humnoi_enum.py  debug.md  debug_appointment.py  debug_database.py  debug_providers.py  fix_humnoi_direct.py  fix_humnoi_enum.py  migrate_availability_model.py  migration_script.py  migration_script.sql  requirements.txt  run_admin.py  start_all.sh  task_log_provider_overhaul.md  todo.md  worker.py
multi-tenant/: .env.template  api.py  app.py  auth.py  billing.py  config.py  dump.rdb  forms.py  manage.py  models.py  (+5 more)
(+236 files in other folders)
